--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="front-content-area">
     <h1>Indian Timber Traders</h1>
     <h3>The shop of high quality Wood</h3>
-    <a href="#" class="btn">Reach Us</a>
+    <a href="#" class="btn">Contect Us</a>
 </div>
 </section>
 <div class="container">
